# ai_newsie

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  nyt_rs.rs  openai_rust.rs  second_voice.rs  sendgrid_mailer.rs  to_speech.rs
