[package]
name = "ai_newsie"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
bytes = "1"
structopt = { version = "0.3", default-features = false }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
sendgrid = "0.18.1"
base64 = "0.21.0"
chrono = "0.4.24"
rusoto_polly = "0.48.0"
rusoto_core = "0.48.0"
lambda_runtime = "0.7.3"
openssl = { version = "0.10.29", features = ["vendored"] }
futures = "0.3.28"
aws-config= { version = "0.55.0"}
aws-sdk-polly= { version = "0.25.0"}

